--- a/code-along/day-3/regex/Regex Exercise.ipynb
+++ b/code-along/day-3/regex/Regex Exercise.ipynb
@@ -33,7 +33,7 @@
     "import re\n",
     "\n",
     "question_one = \"abcdefg abcde abc zwx\"\n",
-    "findall_result = re.findall(\"[a-g]\", question_one)\n",
+    "findall_result = re.findall(\"\", question_one)\n",
     "print(findall_result) "
    ]
   },
@@ -61,7 +61,7 @@
    ],
    "source": [
     "question_two = \"abc123xyz  define '123'  var g = 123;\"\n",
-    "findall_result = re.findall(\"\\d\", question_two)\n",
+    "findall_result = re.findall(\"\", question_two)\n",
     "print(findall_result) "
    ]
   },
@@ -93,7 +93,7 @@
    ],
    "source": [
     "question_three = \"cat. 896. ?=+. abc1\"\n",
-    "findall_result = re.findall(\"...\\.\", question_three)\n",
+    "findall_result = re.findall(\"\", question_three)\n",
     "print(findall_result) "
    ]
   },
@@ -127,7 +127,7 @@
    ],
    "source": [
     "question_four = \"can man fan dan ran pan\"\n",
-    "findall_result = re.findall(\"[c|m|f]an\", question_four)\n",
+    "findall_result = re.findall(\"\", question_four)\n",
     "print(findall_result) "
    ]
   },
@@ -158,7 +158,7 @@
    ],
    "source": [
     "question_five = \"hog dog bog\"\n",
-    "findall_result = re.findall(\"[^b]og\", question_five)\n",
+    "findall_result = re.findall(\"\", question_five)\n",
     "print(findall_result) "
    ]
   },
@@ -189,7 +189,7 @@
    ],
    "source": [
     "question_five = \"wazzzzzup wazzzup wazup\"\n",
-    "findall_result = re.findall(\"waz{3,5}up\", question_five)\n",
+    "findall_result = re.findall(\"\", question_five)\n",
     "print(findall_result) "
    ]
   }
