Added Day 4 Files

--- a/code-along/day-3/regex/Regex Exercise.ipynb
+++ b/code-along/day-3/regex/Regex Exercise.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "60dd0af1",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'a', 'b', 'c', 'd', 'e', 'a', 'b', 'c']\n"
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', ' ', 'a', 'b', 'c', 'd', 'e', ' ', 'a', 'b', 'c', ' ']\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
     "import re\n",
     "\n",
     "question_one = \"abcdefg abcde abc zwx\"\n",
-    "findall_result = re.findall(\"\", question_one)\n",
+    "findall_result = re.findall(\"[^zwx]\", question_one)\n",
     "print(findall_result) "
    ]
   },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "5ec15fd8",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
    ],
    "source": [
     "question_two = \"abc123xyz  define '123'  var g = 123;\"\n",
-    "findall_result = re.findall(\"\", question_two)\n",
+    "findall_result = re.findall(\"[0-3]\", question_two)\n",
     "print(findall_result) "
    ]
   },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "e084745a",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
    ],
    "source": [
     "question_three = \"cat. 896. ?=+. abc1\"\n",
-    "findall_result = re.findall(\"\", question_three)\n",
+    "findall_result = re.findall(\"...\\.\", question_three)\n",
     "print(findall_result) "
    ]
   },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "11d708c8",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
    ],
    "source": [
     "question_four = \"can man fan dan ran pan\"\n",
-    "findall_result = re.findall(\"\", question_four)\n",
+    "findall_result = re.findall(\"[cmf]an\", question_four)\n",
     "print(findall_result) "
    ]
   },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "c7d951f0",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
    ],
    "source": [
     "question_five = \"hog dog bog\"\n",
-    "findall_result = re.findall(\"\", question_five)\n",
+    "findall_result = re.findall(\"[d|h]og\", question_five)\n",
     "print(findall_result) "
    ]
   },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "f1f44b7e",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
    ],
    "source": [
     "question_five = \"wazzzzzup wazzzup wazup\"\n",
-    "findall_result = re.findall(\"\", question_five)\n",
+    "findall_result = re.findall(\"waz{3,5}up\", question_five)\n",
     "print(findall_result) "
    ]
   }
