--- a/code-along/day-3/regex/Regex.ipynb
+++ b/code-along/day-3/regex/Regex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f5ad564c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c45fd50b",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "55725041",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ai', 'ai']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", sample_text)\n",
+    "findall_result = re.findall(\"ai\", sample_text)\n",
     "print(findall_result) "
    ]
   },
@@ -49,10 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "43d138f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(5, 7), match='ai'>\n"
+     ]
+    }
+   ],
    "source": [
     "x = re.search(\"ai\", sample_text)\n",
     "print(x)"
@@ -78,23 +94,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fd4fb388",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The', 'rain', 'in', 'Spain']\n"
+     ]
+    }
+   ],
    "source": [
-    "split_result = re.split(\"\", sample_text)\n",
+    "split_result = re.split(\"\\s\", sample_text)\n",
     "print(split_result) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fc64abc3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The', 'rain', 'in Spain']\n"
+     ]
+    }
+   ],
    "source": [
-    "split_result = re.split(\"\", sample_text, )\n",
+    "split_result = re.split(\"\\s\", sample_text, 2)\n",
     "print(split_result) "
    ]
   },
@@ -108,23 +140,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fc508548",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The1rain1in1Spain\n"
+     ]
+    }
+   ],
    "source": [
-    "sub_result = re.sub(\"\", \"\", sample_text)\n",
+    "sub_result = re.sub(\"\\s\", \"1\", sample_text)\n",
     "print(sub_result) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c01a06d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The1rain1in Spain\n"
+     ]
+    }
+   ],
    "source": [
-    "sub_result = re.sub(\"\", \"\", sample_text, 2)\n",
+    "sub_result = re.sub(\"\\s\", \"1\", sample_text, 2)\n",
     "print(sub_result) "
    ]
   },
@@ -139,23 +187,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f4481159",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'a', 'a', 'a']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"data,Data\")\n",
+    "findall_result = re.findall(\"[a]\", \"data,Data\")\n",
     "print(findall_result) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7876b43d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['3', '4']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"3 little pigs and 4 chickens\")\n",
+    "findall_result = re.findall(\"[0123456789]\", \"3 little pigs and 4 chickens\")\n",
     "print(findall_result)"
    ]
   },
@@ -169,56 +233,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e0298c28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['M', 'G']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"Magandang Gabi\")\n",
+    "findall_result = re.findall(\"[A-Z]\", \"Magandang Gabi\")\n",
     "print(findall_result) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9f7c21c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['M', 'a', 'g', 'a', 'n', 'd', 'a', 'n', 'g', 'G', 'a', 'b', 'i']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"Magandang Gabi\")\n",
+    "findall_result = re.findall(\"[a-zA-Z]\", \"Magandang Gabi\")\n",
     "print(findall_result) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a148de5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['M', 'a', 'g', 'a', 'n', 'd', 'a', 'n', 'g', ' ', 'G', 'a', 'b', 'i']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"Magandang Gabi\")\n",
+    "findall_result = re.findall(\"\\D\", \"Magandang Gabi\")\n",
     "print(findall_result) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d046f6b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"Chapter 1: A whole new world\")\n",
+    "findall_result = re.findall(\"\\d\", \"Chapter 1: A whole new world\")\n",
     "print(findall_result) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "29b6d021",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"Chapter 1: A whole new world\")\n",
+    "findall_result = re.findall(\"[0-3]\", \"Chapter 1: A whole new world\")\n",
     "print(findall_result) "
    ]
   },
@@ -233,12 +337,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8e36b2ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'g', 'a', 'n', 'd', 'a', 'n', 'g', ' ', 'a', 'b', 'i']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"Magandang Gabi\")\n",
+    "findall_result = re.findall(\"[^A-Z]\", \"Magandang Gabi\")\n",
     "print(findall_result) "
    ]
   },
@@ -252,12 +364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "bb63fc81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['M']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"Magandang Gabi\")\n",
+    "findall_result = re.findall(\"^[A-Z]\", \"Magandang Gabi\")\n",
     "print(findall_result) "
    ]
   },
@@ -272,12 +392,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "3be9b325",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['M', 'G']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"Magandang Gabi\")\n",
+    "findall_result = re.findall(\"M|G\", \"Magandang Gabi\")\n",
     "print(findall_result) "
    ]
   },
@@ -299,12 +427,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "f32e54f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Gabi']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"Magandang Gabi\")\n",
+    "findall_result = re.findall(\"Gabi$\", \"Magandang Gabi\")\n",
     "print(findall_result) "
    ]
   },
@@ -318,10 +454,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "001dd8c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['M', 'a', 'g', 'a', 'n', 'd', 'a', 'n', 'g', ' ', 'G', 'a', 'b', 'i']\n"
+     ]
+    }
+   ],
    "source": [
     "findall_result = re.findall(\".\", \"Magandang Gabi\")\n",
     "print(findall_result) "
@@ -329,12 +473,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "12d89210",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['para', 'pata', 'pasa']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"pa.a\", \"para pata pasa\")\n",
+    "findall_result = re.findall(\"pa.a\", \"para pata pasa data\")\n",
     "print(findall_result) "
    ]
   },
@@ -348,12 +500,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2a560b6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mn', 'man', 'maan', 'man']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"mn man maan main woman\")\n",
+    "findall_result = re.findall(\"ma*n\", \"mn man maan main woman\")\n",
     "print(findall_result) "
    ]
   },
@@ -367,12 +527,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "814d2d6f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['man', 'maan', 'man']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"mn man maan main woman\")\n",
+    "findall_result = re.findall(\"ma+n\", \"mn man maan main woman\")\n",
     "print(findall_result) "
    ]
   },
@@ -386,12 +554,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "291b3277",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mn', 'man', 'man']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"mn man maan main woman\")\n",
+    "findall_result = re.findall(\"ma?n\", \"mn man maan main woman\")\n",
     "print(findall_result) "
    ]
   },
@@ -408,23 +584,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "7704569e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['aa', 'aa', 'aaa', 'aa', 'aaa']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"abc dat abc daat aabc daaat aabc daaaat \")\n",
+    "findall_result = re.findall(\"a{2,3}\", \"abc dat abc daat aabc daaat aabc daaaat \")\n",
     "print(findall_result) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "331831f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123', '12', '3456', '73']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"ab123csde 12 and 345673 1 and 2\")\n",
+    "findall_result = re.findall(\"[0-9]{2,4}\", \"ab123csde 12 and 345673 1 and 2\")\n",
     "print(findall_result) "
    ]
   },
@@ -438,12 +630,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "10f5bc68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['b', 'a', 'b']\n"
+     ]
+    }
+   ],
    "source": [
-    "findall_result = re.findall(\"\", \"ab xz abxz axz bxz\")\n",
+    "findall_result = re.findall(\"(a|b|c)xz\", \"ab xz abxz axz bxz\")\n",
     "print(findall_result) "
    ]
   }
