--- a/code-along/day-3/social_media_libraries/googlesearch .ipynb
+++ b/code-along/day-3/social_media_libraries/googlesearch .ipynb
@@ -60,16 +60,17 @@
      "output_type": "stream",
      "text": [
       "https://erjjiostudios.com/environment/the-rise-of-sustainable-fashion-in-the-uk/\n",
-      "https://www.glamourmagazine.co.uk/gallery/sustainable-fashion-brands\n",
+      "https://www.greenelement.co.uk/blog/how-to-be-a-sustainable-fashion-brand/\n",
       "https://www.commonobjective.co/article/the-issues-energy\n",
-      "https://earth.org/uk-sustainable-fashion-brands/\n",
-      "https://www.vogue.co.uk/fashion/article/fashion-shows-sustainability\n",
-      "https://hbr.org/2022/01/the-myth-of-sustainable-fashion\n",
-      "https://goodonyou.eco/most-ethical-and-sustainable-clothing-brands-from-uk/\n",
       "https://www.uswitch.com/gas-electricity/green-energy/sustainable-fashion/\n",
-      "https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/69193/pb13206-clothing-action-plan-100216.pdf\n",
+      "https://publications.parliament.uk/pa/cm201719/cmselect/cmenvaud/1952/1952.pdf\n",
+      "https://wrap.org.uk/taking-action/textiles/initiatives/scap-2020\n",
       "https://www.london.ac.uk/reduce-the-juice/how-have-impact/sustainable-fashion\n",
-      "https://www.harpersbazaar.com/uk/fashion/what-to-wear/a41158/how-to-be-sustainable-fashion/\n"
+      "https://www.britishfashioncouncil.co.uk/uploads/files/1/NEW%20Fashion%20and%20Environment%20White%20Paper.pdf\n",
+      "https://hbr.org/2022/01/the-myth-of-sustainable-fashion\n",
+      "https://www.london.ac.uk/reduce-the-juice/how-have-impact/sustainable-fashion\n",
+      "https://www.britishfashioncouncil.co.uk/uploads/files/1/NEW%20Fashion%20and%20Environment%20White%20Paper.pdf\n",
+      "https://hbr.org/2022/01/the-myth-of-sustainable-fashion\n"
      ]
     }
    ],
@@ -98,16 +99,16 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pytrends in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (4.8.0)\n",
-      "Requirement already satisfied: requests>=2.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from pytrends) (2.27.1)\n",
-      "Requirement already satisfied: pandas>=0.25 in c:\\users\\rheyannmagcalas\\appdata\\roaming\\python\\python39\\site-packages (from pytrends) (1.4.2)\n",
+      "Requirement already satisfied: requests>=2.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from pytrends) (2.25.1)\n",
       "Requirement already satisfied: lxml in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from pytrends) (4.8.0)\n",
+      "Requirement already satisfied: pandas>=0.25 in c:\\users\\rheyannmagcalas\\appdata\\roaming\\python\\python39\\site-packages (from pytrends) (1.4.2)\n",
+      "Requirement already satisfied: numpy>=1.18.5 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from pandas>=0.25->pytrends) (1.22.4)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\rheyannmagcalas\\appdata\\roaming\\python\\python39\\site-packages (from pandas>=0.25->pytrends) (2022.1)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in c:\\users\\rheyannmagcalas\\appdata\\roaming\\python\\python39\\site-packages (from pandas>=0.25->pytrends) (1.22.4)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from pandas>=0.25->pytrends) (2.8.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from requests>=2.0->pytrends) (2021.10.8)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\rheyannmagcalas\\appdata\\roaming\\python\\python39\\site-packages (from requests>=2.0->pytrends) (1.26.9)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\rheyannmagcalas\\appdata\\roaming\\python\\python39\\site-packages (from requests>=2.0->pytrends) (2.0.12)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from requests>=2.0->pytrends) (3.3)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from requests>=2.0->pytrends) (2.10)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from requests>=2.0->pytrends) (4.0.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from requests>=2.0->pytrends) (2021.10.8)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.1->pandas>=0.25->pytrends) (1.16.0)\n"
      ]
     },
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "f91a52df",
    "metadata": {},
    "outputs": [],
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "9e0185f4",
    "metadata": {},
    "outputs": [],
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "8e2da539",
    "metadata": {},
    "outputs": [
@@ -192,16 +193,16 @@
        " 2020-01-26      0\n",
        " 2020-02-02      0\n",
        " ...           ...\n",
-       " 2022-06-05      6\n",
        " 2022-06-12      6\n",
-       " 2022-06-19      5\n",
+       " 2022-06-19      6\n",
        " 2022-06-26      5\n",
        " 2022-07-03      5\n",
+       " 2022-07-10      6\n",
        " \n",
-       " [131 rows x 1 columns]]"
+       " [132 rows x 1 columns]]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
