--- a/code-along/day-3/social_media_libraries/wikipedia.ipynb
+++ b/code-along/day-3/social_media_libraries/wikipedia.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "745b983a",
    "metadata": {},
    "outputs": [
@@ -50,8 +50,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wikimedia Foundation, Inc. (WMF, or simply Wikimedia) is a 501(c)(3) nonprofit organization headquartered in San Francisco, California, registered as a charitable foundation under US law. It owns the Wikimedia projects – which are written and curated by thousands of Wikipedians and other unpaid volunteers – and the MediaWiki wiki software.The Wikimedia Foundation was established in 2003 in St. Petersburg, Florida, by Jimmy Wales as a non-profit way to fund Wikipedia, Wiktionary, and other crowdsourced wiki projects which had until then been hosted by Bomis, Wales' for-profit company. The Foundation finances itself mainly through millions of small donations from Wikipedia readers, collected through email campaigns and annual fundraising banners placed on Wikipedia. These are complemented by grants from various tech companies and philanthropic organizations. \n",
-      "The Foundation has grown rapidly throughout its existence. By 2021, it employed over 550 staff and contractors, with annual revenues in excess of US$160 million, annual expenses of around US$110 million, and a growing endowment, which surpassed US$100 million in June 2021.\n"
+      "The Wikimedia Foundation, Inc., or Wikimedia for short and abbreviated as WMF, is an American 501(c)(3) nonprofit organization headquartered in San Francisco, California and registered as a charitable foundation under local laws. Best known as the hosting platform for Wikipedia, a crowdsourced online encyclopedia, it also hosts other related projects and MediaWiki, a wiki software.The Wikimedia Foundation was established in 2003 in St. Petersburg, Florida, by Jimmy Wales as a nonprofit way to fund Wikipedia, Wiktionary, and other crowdsourced wiki projects that had until then been hosted by Bomis, Wales's for-profit company. The Foundation finances itself mainly through millions of small donations from Wikipedia readers, collected through email campaigns and annual fundraising banners placed on Wikipedia. These are complemented by grants from various tech companies and philanthropic organizations.\n",
+      "The Foundation has grown rapidly throughout its existence. By 2021, it employed over 550 staff and contractors, with annual revenues in excess of US$160 million, annual expenses of around US$110 million, and a growing endowment, which surpassed US$100 million in June 2021.\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5e3177a9",
    "metadata": {},
    "outputs": [
@@ -71,17 +73,17 @@
       "text/plain": [
        "['Barack Obama',\n",
        " 'Barack Obama Sr.',\n",
-       " 'Barack (disambiguation)',\n",
-       " 'Barack Obama religion conspiracy theories',\n",
-       " 'Presidency of Barack Obama',\n",
        " 'Family of Barack Obama',\n",
+       " 'Presidency of Barack Obama',\n",
+       " 'Barack (disambiguation)',\n",
        " 'Barack (name)',\n",
+       " 'Barack Obama religion conspiracy theories',\n",
        " 'Barack Obama presidential campaign',\n",
-       " 'Early life and career of Barack Obama',\n",
-       " 'Cabinet of Barack Obama']"
+       " 'Barack (brandy)',\n",
+       " 'Barack Obama (disambiguation)']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "3120793b",
    "metadata": {},
    "outputs": [],
@@ -167,17 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "26f308d8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"The Philippines ( (listen); Filipino: Pilipinas), officially the Republic of the Philippines (Filipino: Republika ng Pilipinas), is an archipelagic country in Southeast Asia. It is situated in the western Pacific Ocean and consists of around 7,641 islands that are broadly categorized under three main geographical divisions from north to south: Luzon, Visayas, and Mindanao. The Philippines is bounded by the South China Sea to the west, the Philippine Sea to the east, and the Celebes Sea to the southwest. It shares maritime borders with Taiwan to the north, Japan to the northeast, Palau to the east and southeast, Indonesia to the south, Malaysia to the southwest, Vietnam to the west, and China to the northwest. The Philippines covers an area of 300,000 km2 (120,000 sq mi) and, as of 2021, it had a population of around 109 million people, making it the world's thirteenth-most populous country. The Philippines has diverse ethnicities and cultures throughout its islands. Manila is the country's capital, while the largest city is Quezon City; both lie within the urban area of Metro Manila.\\nNegritos, some of the archipelago's earliest inhabitants, were followed by successive waves of Austronesian peoples. Adoption of animism, Hinduism and Islam established island-kingdoms called Kedatuan, Rajahnates, and Sultanates. The arrival of Ferdinand Magellan, a Portuguese explorer leading a fleet for Spain, marked the beginning of Spanish colonization. In 1543, Spanish explorer Ruy López de Villalobos named the archipelago Las Islas Filipinas in honor of Philip II of Spain. Spanish settlement through Mexico, beginning in 1565, led to the Philippines becoming part of the Spanish Empire for more than 300 years. During this time, Catholicism became the dominant religion, and Manila became the western hub of trans-Pacific trade. In 1896, the Philippine Revolution began, which then became entwined with the 1898 Spanish–American War. Spain ceded the territory to the United States, while Filipino revolutionaries declared the First Philippine Republic. The ensuing Philippine–American War ended with the United States establishing control over the territory, which they maintained until the Japanese invasion of the islands during World War II. Following liberation, the Philippines became independent in 1946. Since then, the unitary sovereign state has often had a tumultuous experience with democracy, which included the overthrow of a decades-long dictatorship by a non-violent revolution.\\nThe Philippines is an emerging market and a newly industrialized country whose economy is transitioning from being agriculture-centered to services- and manufacturing-centered. It is a founding member of the United Nations, World Trade Organization, Association of Southeast Asian Nations, the Asia-Pacific Economic Cooperation forum, the East Asia Summit and a member of the Non-Aligned Movement since 1993. The Philippines's position as an island country on the Pacific Ring of Fire that is close to the equator makes it prone to earthquakes and typhoons. The country has a variety of natural resources and is home to a globally significant level of biodiversity.\""
+       "\"The Philippines ( (listen); Filipino: Pilipinas), officially the Republic of the Philippines (Filipino: Republika ng Pilipinas), is an archipelagic country in Southeast Asia. It is situated in the western Pacific Ocean and consists of around 7,641 islands that are broadly categorized under three main geographical divisions from north to south: Luzon, Visayas, and Mindanao. The Philippines is bounded by the South China Sea to the west, the Philippine Sea to the east, and the Celebes Sea to the southwest. It shares maritime borders with Taiwan to the north, Japan to the northeast, Palau to the east and southeast, Indonesia to the south, Malaysia to the southwest, Vietnam to the west, and China to the northwest. The Philippines covers an area of 300,000 km2 (120,000 sq mi) and, as of 2021, it had a population of around 109 million people, making it the world's thirteenth-most populous country. The Philippines has diverse ethnicities and cultures throughout its islands. Manila is the country's capital, while the largest city is Quezon City; both lie within the urban area of Metro Manila.\\nNegritos, some of the archipelago's earliest inhabitants, were followed by successive waves of Austronesian peoples. Adoption of animism, Hinduism and Islam established island-kingdoms called Kedatuan, Rajahnates, and Sultanates. The arrival of Ferdinand Magellan, a Portuguese explorer leading a fleet for Spain, marked the beginning of Spanish colonization. In 1543, Spanish explorer Ruy López de Villalobos named the archipelago Las Islas Filipinas in honor of Philip II of Spain. Spanish settlement through Mexico, beginning in 1565, led to the Philippines becoming ruled by the Spanish Empire for more than 300 years. During this time, Catholicism became the dominant religion, and Manila became the western hub of trans-Pacific trade. In 1896, the Philippine Revolution began, which then became entwined with the 1898 Spanish–American War. Spain ceded the territory to the United States, while Filipino revolutionaries declared the First Philippine Republic. The ensuing Philippine–American War ended with the United States establishing control over the territory, which they maintained until the Japanese invasion of the islands during World War II. Following liberation, the Philippines became independent in 1946. Since then, the unitary sovereign state has often had a tumultuous experience with democracy, which included the overthrow of a decades-long dictatorship by a nonviolent revolution.\\nThe Philippines is an emerging market and a newly industrialized country whose economy is transitioning from being agriculture centered to services and manufacturing centered. It is a founding member of the United Nations, WTO, ASEAN, the APEC forum, and the EAS. The location of the Philippines as an island country on the Pacific Ring of Fire that is close to the equator makes it prone to earthquakes and typhoons. The country has a variety of natural resources and is home to a globally significant level of biodiversity.\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
